2007-10-01  Chris Lumens  <clumens@redhat.com>

	* po/sr@latin.po:  Renamed from sr@Latn.po (#259121).

	* pykickstart/commands/device.py (F8_Device):  Add a new version of
	the device command that does not take a type argument.
	* pykickstart/handlers/control.py:  Use F8_Device for Fedora 8.

2007-09-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/parser.py (Packages.__str__):  Fix output formatting for
	package section header (#310211).

	* tools/ksflatten:  Add a script to flatten out a kickstart file
	containing %includes into one kickstart file (katzj AT redhat DOT
	com).

2007-09-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py: New version.

	* pykickstart/parser.py (Script.__str__):  Fix format string for
	output.
	(Packages.__str__):  Output %end after all the packages.

	* pykickstart/commands/repo.py (F8_Repo.methodToRepo):  Add a function
	to convert a URL method string into a repo object (jkeating AT redhat
	DOT com).

2007-09-10  Chris Lumens  <clumens@redhat.com>

	* Makefile, MANIFEST.in, pykickstart.spec:  Add the kickstart
	documentation from the Fedora wiki.

2007-09-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py: New version.

	* Makefile:  Add a target to run pychecker so I can attempt to cut
	down on all the stupid errors that I just fixed up.

	* pykickstart/parser.py (Script.__str__, Packages.__str__):  Add %end
	token to the end of these sections.

	* pykickstart/version.py (stringToVersion):  string -> s.

	* pykickstart/commands/bootloader.py (FC4_Bootloader):  Call
	superclass's __init__ method.

	* pykickstart/commands/device.py (FC3_Device):  self.deviceOpts ->
	self.moduleOpts.

	* pykickstart/commands/network.py:  Don't pass self when calling
	_populateParser outside of the overridden method.
	(F8_NetworkData.__init__):  Pass noipv4 and noipv6 to superclass.

	* pykickstart/commands/raid.py (F7_Raid):  Call superclass's
	__init__method.
