@@ -4,7 +4,10 @@
 
 	* pykickstart/commands/device.py (F8_Device):  Add a new version of
 	the device command that does not take a type argument.
+	(F8_DeviceData):  Multiple device commands can be specified in a
+	single kickstart file.
 	* pykickstart/handlers/control.py:  Use F8_Device for Fedora 8.
+	Add F8_DeviceData for Fedora 8.
 
 2007-09-28  Chris Lumens  <clumens@redhat.com>
 
